--- a/WCalculadora/MainPage.xaml
+++ b/WCalculadora/MainPage.xaml
@@ -7,7 +7,38 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+          
+          >
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        
+        <TextBox
+            Grid.ColumnSpan="4"
+            PlaceholderText="Numero"
+            IsEnabled="False"
+            FontSize="30"
+            VerticalAlignment="Center"
+            
+            />
+            
+        <Button Grid.Row="1" Grid.Column="0" Content="1"
+                VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
+                FontSize="40"
+                Background="#333333"
+                Foreground="White"
+                />
+        
     </Grid>
 </Page>
