Declaracion de metodos

--- a/WCalculadora/MainPage.xaml
+++ b/WCalculadora/MainPage.xaml
@@ -25,6 +25,7 @@
         </Grid.ColumnDefinitions>
         
         <TextBox
+            x:Name="txt"
             Grid.ColumnSpan="4"
             PlaceholderText="Numero"
             IsEnabled="False"
